fixed extra overflow

--- a/src/pages/Payments/Payments.scss
+++ b/src/pages/Payments/Payments.scss
@@ -77,7 +77,7 @@
        }
        .reacttable-container{
            //border: 1px solid black;
-           width: 330px;
+           width: 300px;
            min-width: 50vw;
            // width: 61.351vw;
            // margin-top: 6.823vw;
@@ -178,13 +178,17 @@
     width: 100px;
     white-space: unset;
    }
-   
-   
+   .container{
+    padding:0;
+   }
+//    .main-container .footer-container {
+//        margin-top:118px;
+//    }
 }
 
 @media (min-width:0px) and (max-width:320px){
     html{
-        width: 375px;
+        width: 0px;
     }
     
     body{
@@ -366,7 +370,27 @@
     white-space: unset;
    }
    
-   
+   .container-fluid {
+
+    padding:0;
+   }
+
+   .container{
+       padding: 0;
+   }
+//    .main-container .footer-container {
+//     margin-top:103px;
+// }
+.main-container .content-wrapper {
+    display: grid;
+}
+
+.main-container .content-wrapper .page-content {
+    margin-top: 50px;
+    height: 100%;
+    padding: 50px 2%;
+    width: 320px;
+}
 }
 
 @media (min-width:413px) and (max-width:760px){
